# tensorflow

./: .bazelrc  MODULE.bazel
tensorflow/: workspace0.bzl  workspace1.bzl  workspace2.bzl
