module(
    name = "tensorflow",
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "grpc", version = "1.48.1", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "rules_android", version = "0.1.1")
bazel_dep(name = "abseil-cpp", version = "20230802.0")
bazel_dep(name = "google_benchmark", version = "1.8.3", repo_name = "com_google_benchmark")
bazel_dep(name = "boringssl", version = "0.0.0-20211025-d4f1ab9")
bazel_dep(name = "protobuf", version = "21.7")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
